Update versions of libraries to work with compile api 35