@@ -26,6 +26,8 @@ def googleMapsApiKey = secrets.getProperty('GOOGLE_MAPS_API_KEY', '')
 def mapboxToken = secrets.getProperty('MAPBOX_ACCESS_TOKEN', '')
 
 android {
+    namespace = "org.odk.collect.android"
+
     compileSdkVersion rootProject.androidCompileSdk
 
     buildFeatures {
@@ -42,6 +44,14 @@ android {
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         archivesBaseName = 'fieldTask'      // smap
+    }
+
+    tasks.withType(JavaCompile).configureEach{
+        options.fork = true
+        options.forkOptions.jvmArgs +=[
+                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
     }
 
     signingConfigs {
@@ -275,30 +285,30 @@ configurations.all {
 }
 
 dependencies {
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.0'
+    coreLibraryDesugaring(libs.desugar)
 
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation "androidx.core:core-ktx:${rootProject.coreKtxVersion}"
+    implementation "androidx.core:core-ktx:1.16.0"
     implementation 'androidx.browser:browser:1.4.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation "androidx.work:work-runtime:2.7.1"
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation "androidx.work:work-runtime:2.10.2"
 
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.exifinterface:exifinterface:1.3.5'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.preference:preference:1.2.0'
+    implementation 'androidx.preference:preference:1.2.1'
     implementation "androidx.fragment:fragment:${rootProject.fragmentVersion}"
 
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
     implementation "com.google.android.gms:play-services-auth:20.4.0"
-    implementation "com.google.android.gms:play-services-maps:18.2.0"
+    implementation "com.google.android.gms:play-services-maps:19.2.0"
     implementation "com.google.android.gms:play-services-location:20.0.0"  // Downgraded from 21.0.1 due to location errors in mapbobox and google maps, https://developers.google.com/android/guides/releases#october_13_2022
     implementation "com.google.firebase:firebase-messaging:23.1.0"      // smap synchronisation
 
-    implementation 'com.google.firebase:firebase-analytics:21.2.0'
-    implementation 'com.google.firebase:firebase-crashlytics:18.3.2'
+    implementation 'com.google.firebase:firebase-analytics:22.5.0'
+    implementation 'com.google.firebase:firebase-crashlytics:19.4.4'
 
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.7.1' // update from 9.2.1 to fix mapbox issue
 
@@ -369,16 +379,13 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
 
     // Dagger:
-    implementation "com.google.dagger:dagger:${rootProject.daggerVersion}"
-    annotationProcessor "com.google.dagger:dagger-compiler:${rootProject.daggerVersion}"
-
-    // Needed for injection into Robolectric tests
-    testAnnotationProcessor "com.google.dagger:dagger-compiler:${rootProject.daggerVersion}"
+    implementation libs.dagger
+    annotationProcessor libs.daggerCompiler
 
     // Dagger Android:
-    implementation "com.google.dagger:dagger-android:${rootProject.daggerVersion}"
-    implementation "com.google.dagger:dagger-android-support:${rootProject.daggerVersion}"
-    annotationProcessor "com.google.dagger:dagger-android-processor:${rootProject.daggerVersion}"
+    implementation libs.daggerAndroid
+    implementation "com.google.dagger:dagger-android-support:2.56.2"
+    annotationProcessor libs.daggerAndroidProcessor
 
     // RxJava 2:
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
@@ -415,45 +422,6 @@ dependencies {
     // Annotations understood by FindBugs
     compileOnly 'com.google.code.findbugs:annotations:3.0.1'
     compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
-
-    // Used to generate documentation screenshots.
-    //androidTestImplementation "tools.fastlane:screengrab:2.0.0"
-
-    // Testing-only dependencies
-    //testImplementation "junit:junit:4.13.1"
-    //testImplementation "org.mockito:mockito-core:3.6.28"
-    //testImplementation 'org.mockito:mockito-inline:3.7.7'
-
-    //testImplementation project(path: ':testshared')
-    //testImplementation "org.robolectric:robolectric:4.3.1"
-    //testImplementation 'androidx.test.ext:junit:1.1.2'
-    //debugImplementation project(':fragmentstest')
-    //testImplementation "androidx.arch.core:core-testing:2.1.0"
-    //testImplementation "org.robolectric:shadows-multidex:4.4"
-    //testImplementation "com.squareup.okhttp3:mockwebserver:${rootProject.okhttp3Version}"
-    //testImplementation "com.squareup.okhttp3:okhttp-tls:${rootProject.okhttp3Version}"
-
-    // power mock (for mocking final methods which is not handled by mockito)
-    //testImplementation "org.powermock:powermock-module-junit4:2.0.9"
-    //testImplementation "org.powermock:powermock-api-mockito2:2.0.9"
-
-    //testImplementation 'org.hamcrest:hamcrest:2.2'
-
-    //testImplementation "org.json:json:20201115"
-
-    //androidTestImplementation "org.mockito:mockito-android:3.6.28"
-    //androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    //androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    //androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-    //androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
-    //androidTestImplementation("androidx.test.espresso:espresso-intents:3.3.0") {
-    //    exclude group: 'com.android.support', module: 'support-annotations'
-    //    exclude group: 'com.google.code.findbugs', module: 'jsr305'
-    //}
-
-    //androidTestImplementation "com.squareup.okhttp3:mockwebserver:${rootProject.okhttp3Version}"
-
-    //androidTestImplementation "androidx.work:work-testing:2.4.0"
 }
 
 // Must be at bottom to prevent dependency collisions
